--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>org.springframework</groupId>
-    <artifactId>gs-securing-web</artifactId>
-    <version>0.1.0</version>
-
+    <groupId>llosa.joel.springboot.security</groupId>
+	<artifactId>spring-boot-security</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -27,20 +26,11 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-test</artifactId>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <properties>
         <java.version>1.8</java.version>
+        <maven-jar-plugin.version>2.6</maven-jar-plugin.version> <!-- fixes Eclipse Mars m2e error in MavenArchiver.getManifest() -->
     </properties>
 
 
